--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <title>MARVETTI.AI | Smart Business Tools</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Exo 2', 'sans-serif'],
+                    },
+                }
+            }
+        }
+    </script>
     <style>
         body { 
             font-family: 'Exo 2', sans-serif; 
             overflow-x: hidden;
-            background-color: #020617;
+            transition: background-color 0.5s ease, color 0.5s ease;
         }
         
         /* Smooth Scrollbar */
@@ -19,33 +31,53 @@
             width: 4px;
         }
         ::-webkit-scrollbar-track {
+            background: rgba(15, 23, 42, 0.05);
+        }
+        .dark ::-webkit-scrollbar-track {
             background: rgba(15, 23, 42, 0.5);
         }
         ::-webkit-scrollbar-thumb {
-            background: rgba(236, 27, 35, 0.3);
+            background: rgba(236, 27, 35, 0.2);
             border-radius: 20px;
         }
 
         /* Glass Style */
         .glass-panel {
-            background: rgba(15, 23, 42, 0.6);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(16px);
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.1);
+        }
+        .dark .glass-panel {
+            background: rgba(15, 23, 42, 0.6);
             border: 1px solid rgba(255, 255, 255, 0.08);
+            box-shadow: none;
         }
 
         .glass-button {
-            background: rgba(255, 255, 255, 0.03);
+            background: rgba(0, 0, 0, 0.03);
             backdrop-filter: blur(8px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(0, 0, 0, 0.05);
             transition: all 0.3s ease;
         }
+        .dark .glass-button {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
         .glass-button:hover {
+            background: rgba(0, 0, 0, 0.06);
+            border-color: rgba(236, 27, 35, 0.3);
+        }
+        .dark .glass-button:hover {
             background: rgba(255, 255, 255, 0.08);
             border-color: rgba(236, 27, 35, 0.5);
         }
 
         /* Neon Glow */
         .glow-red {
+            box-shadow: 0 10px 40px -10px rgba(236, 27, 35, 0.4);
+        }
+        .dark .glow-red {
             box-shadow: 0 0 20px rgba(236, 27, 35, 0.2);
         }
 
@@ -61,8 +93,11 @@
 
         /* Background Grid */
         .bg-grid {
-            background-image: radial-gradient(circle at 1px 1px, rgba(255, 255, 255, 0.03) 1px, transparent 0);
+            background-image: radial-gradient(circle at 1px 1px, rgba(0, 0, 0, 0.05) 1px, transparent 0);
             background-size: 40px 40px;
+        }
+        .dark .bg-grid {
+            background-image: radial-gradient(circle at 1px 1px, rgba(255, 255, 255, 0.03) 1px, transparent 0);
         }
     </style>
 <script type="importmap">
@@ -76,7 +111,7 @@
 }
 </script>
 </head>
-<body class="text-slate-200">
+<body class="text-slate-900 dark:text-slate-200 bg-slate-50 dark:bg-[#020617]">
     <div id="root"></div>
 </body>
 </html>
