--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
   }
 }
@@ -113,5 +114,6 @@
 </head>
 <body class="text-slate-900 dark:text-slate-200 bg-slate-50 dark:bg-[#020617]">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
